css/styles.css
/* ... */
.project-photo a:hover,
.project-photo a:focus {
    color: var(--white);
    background-color: var(--green);
    -webkit-transform: scale(1.1);
}

.photo-overlay {
	color: var(--white);
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0; 
	left: 0;
	padding-left: 10px;
	padding-right: 10px;
    display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	background: rgba(0, 0, 0, .8); 
    opacity: 0;
    -webkit-transition-property: opacity;
    -webkit-transition-duration: 1s;
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: .5px;
}

.photo-overlay h2 {
    font-size: 1.1rem;
    margin: 0;
    position: absolute;
    top: 10px;
}

.photo-overlay-p {
    font-size: .9rem;
    /* width: 98%;
    max-width: 98%; */
    text-align: center;
    margin: 0;
    line-height: 1;
}

.projects-footer {
    font-size: 12px;
    font-weight: 900;
    text-align: center;
    margin: 0px auto;
    padding: 0 10px;
    text-transform: uppercase;
}

.projects-footer a {
    text-underline-offset: 5px;
    text-decoration: underline;
}

.fr-photo-overlay-p {
    font-size: 12px;
}

/* ============================================================================================================
                                                
                                            CONTACT PAGE

===============================================================================================================*/


.contact {
    position: absolute;
    bottom: unset;
    display: flex;
    justify-content: center;
    align-items: center;
}

.contact-wrapper {
    display: flex;
    flex-direction: row;
    justify-content: center;
    flex-wrap: wrap;
    height: 100%;
}

.contact-left,
.contact-right {
    padding: 15px 10px;
    margin: 0 auto;
}

.contact-left {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.contact-heading {
    text-align: center;
}

.contact-right {
    display: flex;
    justify-content: center;
    align-items: center;
}

form,
.contact-links-wrapper {
    width: 100%;
    margin: 0 auto;
}

.contact-links-wrapper {
    margin-top: 15px;
}

.contact ul {
    list-style-type: none;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    justify-content: center;
}

.contact svg {
    height: 40px;
    width: 50px;
    transition: transform .5s ease;
}

.contact-icons {
    fill: var(--dark-blue);
}

.contact svg:hover,
.contact svg:focus {
    transform: rotate(10deg) scale(1.2);
}

.form {
    padding: 30px 15px;
    background-color: var(--blue);
    color: var(--white);
    border-radius: 5px;
    letter-spacing: .5px;
}

.form-control h2 {
    text-align: center;
    font-size: 1.2rem;
}

.form-control {
    margin-bottom: 10px;
    padding-bottom: 20px;
    position: relative;
    text-transform: uppercase;
}

.form-control label {
    display: inline-block;
    margin-bottom: 5px;
    font-weight: 600;
}

.form-control input,
.form-control textarea {
    border-radius: 5px;
    border: 3px solid var(--white);
    display: block;
    font-size: 1rem;
    width: 100%;
    padding: 10px 35px 10px 10px;
    font-family: 'Varela Round', sans-serif;
}

/* Hide scrollbar for Chrome, Safari and Opera */
.form-control textarea::-webkit-scrollbar {
    display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.form-control textarea {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
}

.form-control i {
    position: absolute;
    top: 38px;
    right: 10px;
    visibility: hidden;
}

.form-control small {
    position: absolute;
    bottom: 0;
    left: 5px;
    visibility: hidden;
    font-size: 12px;
    font-weight: 600;
    color: var(--white);
    text-transform: none;
}

.send-button-container {
    display: flex;
    align-items: center;
    justify-content: center;
}

#send-button {
    margin: 0 auto;
    padding: 5px 40px;
    background-color: var(--dark-blue);
    color: var(--white);
    border-radius: 5px;
    font-family: inherit;
    font-size: 1rem;
    font-weight: 600;
    letter-spacing: .5px;
    text-transform: uppercase;
    transition: all .5s ease;
    border: none;
}

#send-button:hover,
#send-button:focus {
    transform: scale(1.2);
    background-color: var(--green);
}

.success input,
.success textarea {
	border-color: var(--green);
}

.error input,
.error textarea {
	border-color: var(--red);
}
.success i.fa-solid.fa-circle-check {
	color: var(--green);
	visibility: visible;
}

.error i.fa-solid.fa-circle-exclamation {
	color: var(--red);
	visibility: visible;
}

.form-control.error small {
	visibility: visible;
}

/* ============================================================================================================
                                                
                                            MEDIA QUERIES

===============================================================================================================*/

@media screen and (min-width: 320px) {
    .projects-footer {
        max-width: 350px;
    }

    #portfolio-container {
        width: 300px;
    }

    .photo-overlay h2 {
        font-size: 1.5rem;
    }

    .photo-overlay-p {
        font-size: 1.1rem;
    }

    .photo-overlay a {
        font-size: 1.1rem;
    }

    .projects-wrapper {
        font-size: 1.2rem;
    }

    .project-container,
    .project-photo,
    .project-photo img,
    .photo-overlay {
        max-height: 168px;
    }
}
/* ... */

